fixed doc for pull payment model
